@@ -67,19 +67,3 @@ def navi_next_diary( date )
 	end
 end
 
-add_header_proc do
-	if /^(form|edit|preview|showcomment)$/ =~ @mode then
-		<<-HTML
-		<style type="text/css"><!--
-		form.update span.year,
-		form.update span.month,
-		form.update span.day,
-		form.update span.edit {
-			display: none;
-		}
-		--></style>
-		HTML
-	else
-		''
-	end
-end
